# CMakeProTemplate

./: .gitignore  CMakeLists.txt  README.md
biology/: CMakeLists.txt
biology/include/biology/: Animal.h  Cat.h  Dog.h  Mammal.h
biology/src/: Cat.cpp  Dog.cpp  Mammal.cpp
common/: CMakeLists.txt
common/include/common/: commfunc.h  cppslefuse.h  dll_export.h  utils.h
common/src/: commfunc.cpp  cppslefuse.cpp  utils.cpp
mainproject/: CMakeLists.txt
mainproject/include/mainproject/: utils.hpp
mainproject/src/: main.cpp
network/: CMakeLists.txt
network/include/network/: socket.h
network/src/: socket.cpp
